--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, height=device-height, initial-scale=1 user-scalable=no, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simple Calculator Nitin kumar</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
     <!-- Common Tags -->
     <meta content='#171825' name='theme-color' />
@@ -118,8 +118,8 @@
     </div>
 </body>
 
-<script src="./scripts/hist.js"></script>
-<script src="./scripts/calc.js"></script>
+<script src="hist.js"></script>
+<script src="calc.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70447982-5"></script>
 <script>
